docs: 优化 SEO 配置并重构技术文档
- 添加 sitemap、JSON-LD 结构化数据、Open Graph/Twitter Card 元数据
- 新增 robots.txt 搜索引擎爬虫配置
- 扩展内容集合 schema 支持 SEO 字段
- 优化 about.md 个人介绍页面，突出云原生与 AI 技术专长
- 重构 IDEA 插件推荐文档，使用表格展示提升可读性
- 优化 PowerShell Get-Verb 文档，添加分类表格和示例

--- a/src/content/docs/ai/79741022-get-verb.md
+++ b/src/content/docs/ai/79741022-get-verb.md
@@ -1,32 +1,94 @@
 ---
 title: PowerShell Get-Verb 使用指南
-description: PowerShell Get-Verb cmdlet 使用指南
+description: PowerShell Get-Verb cmdlet 动词规范与使用指南
 pubDate: 2025-02-09
 ---
 
-"Get-Verb" 是 PowerShell 中的一个 cmdlet，用于列出常用的动词，通常用于命名 PowerShell 命令（cmdlets）和函数以遵循 PowerShell 命名约定。以下是一些常见的 "Get-Verb" 返回的动词列表，这些动词通常用于命名 PowerShell 命令：
+`Get-Verb` 是 PowerShell 中的一个内置 cmdlet，用于列出系统推荐的动词。这些动词遵循 PowerShell 命名约定，有助于保持命令的可预测性和一致性。
 
-```text
+## 基本用法
 
-Get: 用于获取信息，通常用于查询资源的信息。
-Set: 用于设置或更改属性或状态。
-New: 用于创建新的资源或对象。
-Add: 用于添加元素或资源到一个集合中。
-Remove: 用于移除元素或资源。
-Clear: 用于清除或擦除数据或状态。
-Test: 用于测试条件或状态。
-Start: 用于启动某些操作或任务。
-Stop: 用于停止某些操作或任务。
-Enable: 用于启用或激活某些功能或设置。
-Disable: 用于禁用或停用某些功能或设置。
-Backup: 用于创建备份。
-Restore: 用于恢复或还原数据或状态。
-Convert: 用于转换数据或类型。
-Format: 用于格式化数据或输出。
-Initialize: 用于初始化资源或对象。
-Uninstall: 用于卸载或移除程序或组件。
-Repair: 用于修复或恢复损坏的资源。
-Update: 用于更新资源或组件。
-Invoke: 用于调用或执行操作。
+```powershell
+# 列出所有推荐的动词
+Get-Verb
 
+# 筛选特定动词
+Get-Verb | Where-Object { $_.Verb -like 'Get*' }
+
+# 按动词分组查看
+Get-Verb | Group-Object Verb
 ```
+
+## 动词分类参考
+
+### 数据操作类
+
+| 动词 | 用途 | 示例 |
+|:-----|:-----|:-----|
+| Get | 获取信息 | `Get-Process` |
+| Set | 设置或更改属性 | `Set-Variable` |
+| New | 创建新资源 | `New-Item` |
+| Add | 添加到集合 | `Add-Content` |
+| Remove | 从集合移除 | `Remove-Item` |
+| Clear | 清除数据或状态 | `Clear-Host` |
+| Copy | 复制资源 | `Copy-Item` |
+| Move | 移动资源 | `Move-Item` |
+| Rename | 重命名资源 | `Rename-Item` |
+
+### 流程控制类
+
+| 动词 | 用途 | 示例 |
+|:-----|:-----|:-----|
+| Start | 启动操作 | `Start-Process` |
+| Stop | 停止操作 | `Stop-Process` |
+| Invoke | 调用执行 | `Invoke-Command` |
+| Measure | 测量性能 | `Measure-Object` |
+| Tee | 分支并传递 | `Tee-Object` |
+
+### 状态管理类
+
+| 动词 | 用途 | 示例 |
+|:-----|:-----|:-----|
+| Enable | 启用功能 | `Enable-PSRemoting` |
+| Disable | 禁用功能 | `Disable-PSRemoting` |
+| Undo | 撤销操作 | `Undo-` (保留前缀) |
+
+### 数据转换类
+
+| 动词 | 用途 | 示例 |
+|:-----|:-----|:-----|
+| Convert | 数据类型转换 | `ConvertTo-HTML` |
+| Format | 格式化输出 | `Format-Table` |
+| Import | 导入数据 | `Import-Csv` |
+| Export | 导出数据 | `Export-CliXml` |
+
+### 生命周期管理类
+
+| 动词 | 用途 | 示例 |
+|:-----|:-----|:-----|
+| Initialize | 初始化资源 | `Initialize-Disk` |
+| Update | 更新资源 | `Update-List` |
+| Repair | 修复资源 | `Repair-WindowsImage` |
+| Backup | 创建备份 | `Backup-GPO` |
+| Restore | 恢复数据 | `Restore-Computer` |
+
+### 其他常用动词
+
+| 动词 | 用途 | 示例 |
+|:-----|:-----|:-----|
+| Test | 测试条件 | `Test-Connection` |
+| Find | 查找资源 | `Find-Package` |
+| Join | 合并资源 | `Join-Path` |
+| Split | 拆分资源 | `Split-Path` |
+| Select | 选择对象 | `Select-Object` |
+| Sort | 排序对象 | `Sort-Object` |
+| Search | 搜索资源 | `Search-ADAccount` |
+| Register | 注册资源 | `Register-ScheduledJob` |
+| Unregister | 取消注册 | `Unregister-Event` |
+
+## 命名规范建议
+
+1. **使用推荐动词**：优先使用 `Get-Verb` 返回的动词
+2. **动名词组合**：动词 + 名词，如 `Get-Process`、`Set-Location`
+3. **避免缩写**：使用完整的单词，避免缩写形式
+4. **一致性**：同一模块中保持动词使用的一致性
